--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,8 @@
 <div>{{observableData1}} | {{observableData2}}</div>
 <br>
 <div>{{subjectData1}} | {{subjectData2}} </div>
+
+<app-content-child>
+    <h1>標題一</h1>
+    <h1 #lastHead>標題二</h1>
+</app-content-child>
