--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,9 @@
     <h1>標題一</h1>
     <h1 #lastHead>標題二</h1>
 </app-content-child>
+
+<button type="button" #button="customButton" appCustomButton>
+    套用指令的按鈕
+</button>
+
+<p appHighlight>Highlight me!</p>
